fixed missing title in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
     <html>
 	    <head>
-		    <title>Static HTML</style>
+		    <title>Static HTML</title>
 	    </head>
 	    <body>
 		    <p>This is the first paragraph in a simple static HTML. There is no <strong>CSS</strong> or <strong>Javascript</strong></p>
